[gd_scene load_steps=5 format=2]

[ext_resource path="res://MusicWorld.gd" type="Script" id=1]
[ext_resource path="res://material_beat_indicator.tres" type="Material" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.466667, 0.192157, 0.67451, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.462745, 0.521569, 0.980392, 1 )

[node name="Root" type="Node"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 7 )
current = true

[node name="Background" type="Spatial" parent="Spatial"]

[node name="Wall" type="CSGBox" parent="Spatial/Background"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
width = 40.0
height = 20.0
depth = 0.1

[node name="Player" type="Spatial" parent="Spatial"]

[node name="PlayerShape" type="CSGCylinder" parent="Spatial/Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
radius = 0.5
height = 2.0
sides = 16
cone = true
material = SubResource( 1 )

[node name="MusicWorld" type="Spatial" parent="Spatial"]
script = ExtResource( 1 )

[node name="Bar01Beat1Indicator" type="CSGBox" parent="Spatial/MusicWorld"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75 )
width = 1.8
height = 18.0
depth = 0.2
material = ExtResource( 2 )

[node name="Platform1" type="CSGBox" parent="Spatial/MusicWorld/Bar01Beat1Indicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.75 )
width = 1.8
height = 0.2
depth = 1.0
material = SubResource( 3 )

[node name="Bar01Beat2Indicator" type="CSGBox" parent="Spatial/MusicWorld"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -0.75 )
width = 1.8
height = 18.0
depth = 0.2
material = ExtResource( 2 )

[node name="Platform1" type="CSGBox" parent="Spatial/MusicWorld/Bar01Beat2Indicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.75 )
width = 1.8
height = 0.2
depth = 1.0
material = SubResource( 3 )

[node name="Platform2" type="CSGBox" parent="Spatial/MusicWorld/Bar01Beat2Indicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0.75 )
width = 1.8
height = 0.2
depth = 1.0
material = SubResource( 3 )

[node name="Platform3" type="CSGBox" parent="Spatial/MusicWorld/Bar01Beat2Indicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0.75 )
width = 1.8
height = 0.2
depth = 1.0
material = SubResource( 3 )

[node name="Platform4" type="CSGBox" parent="Spatial/MusicWorld/Bar01Beat2Indicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0.75 )
width = 1.8
height = 0.2
depth = 1.0
material = SubResource( 3 )

[node name="Platform5" type="CSGBox" parent="Spatial/MusicWorld/Bar01Beat2Indicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0.75 )
width = 1.8
height = 0.2
depth = 1.0
material = SubResource( 3 )

[node name="Bar01Beat3Indicator" type="CSGBox" parent="Spatial/MusicWorld"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -0.75 )
width = 1.8
height = 18.0
depth = 0.2
material = ExtResource( 2 )

[node name="Bar01Beat4Indicator" type="CSGBox" parent="Spatial/MusicWorld"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -0.75 )
width = 1.8
height = 18.0
depth = 0.2
material = ExtResource( 2 )
